apps/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: quizup-prod
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
